# GPU_Karp_Rabin

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cu  small_test.txt  test.txt
benchfiles/: info.txt
benchmark/header/: BenchmarkCase.h
benchmark/src/: Benchmark.cpp  BenchmarkCase.cpp  CMakeLists.txt
docs/diagrams/: styles.wsd
docs/diagrams/src/: dir_structure.wsd  flow_chart.wsd  hash.wsd  rabin_karp_search.wsd  text.wsd
docs/report/: bibliography.bib  main.tex
docs/report/chapters/: algorytm_rk.tex  implementacja.tex  (+4 more)
header/: FileNotFoundException.h  Hash.h  PlainTextReader.h  RabinKarpSearch.cuh  RabinKarpSearch.h  RabinKarpSearchGPU.cuh  StandardHash.h
header/Hash/: Hash.cuh  Hash.h  StandardHash.cuh  StandardHash.h
header/Text/: FileNotFoundException.cuh  FileNotFoundException.h  PlainTextReader.cuh  PlainTextReader.h  Reader.cuh  Reader.h  TextFileReader.cuh  TextFileReader.h  TextReaderFactory.cuh  TextReaderFactory.h
header/Utility/: TextSplitter.cuh  TextSplitter.h
main/header/: RabinKarpSearch.h
main/src/: CMakeLists.txt
scripts/: generate-file.sh
src/: CMakeLists.txt  Hash.cpp  PlainTextReader.cpp  RabinKarpSearch.cpp  RabinKarpSearch.cu  RabinKarpSearchGPU.cu  StandardHash.cpp  TextFileReader.cpp  TextReaderFactory.cpp
src/Hash/: CMakeLists.txt  Hash.cpp  Hash.cu  StandardHash.cpp  StandardHash.cu
src/Text/: CMakeLists.txt  PlainTextReader.cpp  PlainTextReader.cu  TextFileReader.cpp  TextFileReader.cu  TextReaderFactory.cpp  TextReaderFactory.cu
src/Utility/: CMakeLists.txt  TextSplitter.cpp  TextSplitter.cu
(+14 files in other folders)
